--- a/index.css
+++ b/index.css
@@ -20,13 +20,18 @@
     color: white;
     border: none ;
     border-radius: 5px ;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: bold;
+    padding-bottom: 5px;
+    cursor:         pointer ;
 
 }
 header {
  background-color: #f5e2d5 ;
  padding-top: 50px;
+ background: url(images/developer.png), url(images/header_bg.png),  #f5e2d5 ;
+ background-position: top left , bottom right;
+ background-repeat:         no-repeat ;
 
 }
 nav {
@@ -48,4 +53,36 @@ nav .menu li a {
    font-size: 20px ;
    color: #474747;
    text-decoration:     none ;
+}
+.banner{
+    /* border:     1px solid red ; */
+    margin: 47px 38px 0px 230px ;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.banner-content{
+    max-width: 585px;
+    max-height: 356px;
+}
+.banner-content h2{
+   font-size: 45px;
+   font-weight: 600;
+   color: #474747;
+}
+.banner-content h1{
+   font-size: 85px;
+   font-weight: bold;
+   color: #000000;
+}
+.banner-content p{
+    font-size: 18px;
+    color: #474747;
+    line-height:        30px ;
+   
+}
+.banner-image img{
+    width: 500px;
+    
 }
