--- a/index.css
+++ b/index.css
@@ -104,6 +104,7 @@ nav .menu li a {
 .section-heading{
     max-width: 827px;
     text-align: center ;
+    margin: 0% auto;
     
 
 }
@@ -136,3 +137,36 @@ nav .menu li a {
     font-size: 20px;
     color: #181818 ;
 }
+#skills{
+    padding-top: 130px;
+    padding-bottom: 100px;
+}
+#skills .skills-container {
+    width: 71% ;
+    max-width: 1140px ;
+    margin: 0 auto ;
+}
+#skills .skills-container .skills-box{
+    display: flex;
+    gap: 24px;
+}
+.skills-box .skill-card {
+    padding:    30px ;
+   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+   max-width: 267px;
+}
+.skill-card img{
+    width: 44px;
+    height: 44px;
+    margin-bottom: 30px;
+}
+.skill-card h3{
+   font-size: 20px;
+   color:       #181818 ;
+   padding-bottom:  20px ;
+}
+.skill-card p{
+    font-size: 16px;
+    color: #757575 ;
+}
+    
