--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ header {
  background-color: #f5e2d5 ;
  padding-top: 50px;
  background: url(images/developer.png), url(images/header_bg.png),  #f5e2d5 ;
- background-position: top left , bottom right;
+ background-position: 23px 38px , bottom right;
  background-repeat:         no-repeat ;
 
 }
@@ -231,4 +231,51 @@ nav .menu li a {
 .text-center{
     text-align: center ;
 }
+
+footer {
+    margin-top: 130px;
+    background-color: #FFF8F3;
+    padding: 130px 0px;
+}
     
+footer .footer-container {
+    width: 71% ;
+    max-width:  1140px ;
+    margin:     0 auto ;
+    display: flex;
+    gap: 116px;
+
+}
+.footer-container .social {
+    max-width: 562px;
+}
+.footer-container h2 {
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 30px;
+}
+.footer-container p {
+    font-size: 16px;
+    font-weight: normal;
+    color: #474747;
+    margin-top: 20px;
+    margin-bottom: 30px;  
+}
+.footer-container .icon a {
+    margin-right: 24px;
+}
+.footer-container form input[type="text"] , .footer-container form textarea
+    {
+        width: 461px;
+        /* height: 50px; */
+        padding-right: 30px;
+        padding: 18px 31px;
+        margin-bottom: 24px;
+        border: none;
+        border-radius:  5px ;
+        color: #757575;
+        font-size: 16px;
+        font-family: 'Open Sans', sans-serif;
+
+    }
